[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Ui/new_styleboxflat.tres" type="StyleBox" id=2]
[ext_resource path="res://Assets/Ui/new_styleboxflafft.tres" type="StyleBox" id=3]
[ext_resource path="res://Font/SecularOne-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Ui/outline_settings_white_48dp.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Terrain.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/TitleMusic.wav" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 112
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 4 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.253906
anchor_top = 0.04
anchor_right = 0.746094
anchor_bottom = 0.373333
margin_bottom = -36.0
custom_fonts/font = SubResource( 1 )
text = "KÃ‹MI"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.328125
anchor_top = 0.333333
anchor_right = 0.668945
anchor_bottom = 0.866667
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="New_Game" type="Button" parent="VBoxContainer"]
margin_right = 348.0
margin_bottom = 104.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Button" parent="VBoxContainer"]
margin_top = 108.0
margin_right = 348.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Tutorial"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 216.0
margin_right = 348.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.90625
anchor_top = 0.0133333
anchor_right = 0.984375
anchor_bottom = 0.146667
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
icon = ExtResource( 5 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTerrain" parent="." instance=ExtResource( 8 )]

[node name="Camera" type="Camera" parent="HTerrain"]
transform = Transform( 0.715644, -0.261537, 0.647651, 0, 0.927249, 0.374445, -0.698465, -0.267969, 0.66358, 250, 88.0057, 250 )
far = 2759.1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="pressed" from="VBoxContainer/New_Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
